# BackgroundSplit-OpenCV

./: CMakeLists.txt  README - 中文.md  README.md
src/BGDifference/: BGDifference.cpp  BGDifference.h  main.cpp
src/FramesDifference/: main.cpp
src/ViBe/: Vibe.cpp  Vibe.h  main.cpp
src/ViBe+/: ViBePlus.cpp  ViBePlus.h  ViBePlusMacro.h  main.cpp
